--- a/templates/clean.html.twig
+++ b/templates/clean.html.twig
@@ -72,14 +72,21 @@
                 </div>
             </div>
         </header>
+        <main class="mb-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        {% for flashError in app.flashes('verify_email_error') %}
+                            <div class="alert alert-danger" role="alert">{{ flashError }}</div>
+                        {% endfor %}
 
-        {% for flashError in app.flashes('verify_email_error') %}
-             <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-        {% endfor %}
-
-                {% for flashSuccess in app.flashes('success') %}
-             <div class="alert alert-success" role="alert">{{ flashSuccess }}</div>
-        {% endfor %}
+                        {% for flashSuccess in app.flashes('success') %}
+                            <div class="alert alert-success" role="alert">{{ flashSuccess }}</div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </main>
 
         {% block body %}{% endblock %}
         <!-- Footer-->
