--- a/templates/clean.html.twig
+++ b/templates/clean.html.twig
@@ -16,11 +16,11 @@
         <link href="{{ asset('clean/css/styles.css') }}" rel="stylesheet" />
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
+        {% block stylesheets_head %}
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
 
-        {% block javascripts %}
+        {% block javascripts_head %}
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
     </head>
@@ -40,19 +40,18 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path("post_view", {'id': 123}) }}">Sample Post</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path("page_contact") }}">Contact</a></li>
         
-            {% if not is_granted("ROLE_USER") %}
-        <li class="nav-item">
-            <a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path('app_register') }}">S'inscrire</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path('app_login') }}">Login</a>
-        </li>
-    {% else %}
-        <li class="nav-item">
-            <a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path('app_logout') }}">Logout</a>
-        </li>
-    {% endif %}
-        
+                        {% if not is_granted("ROLE_USER") %}
+                            <li class="nav-item">
+                                <a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path('app_register') }}">S'inscrire</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path('app_login') }}">Login</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path('app_logout') }}">Logout</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -72,23 +71,33 @@
                 </div>
             </div>
         </header>
-        <main class="mb-4">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        {% for flashError in app.flashes('verify_email_error') %}
-                            <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-                        {% endfor %}
 
-                        {% for flashSuccess in app.flashes('success') %}
-                            <div class="alert alert-success" role="alert">{{ flashSuccess }}</div>
-                        {% endfor %}
+        {% for flashError in app.flashes('verify_email_error') %}
+            <main class="mb-4">
+                <div class="container px-4 px-lg-5">
+                    <div class="row gx-4 gx-lg-5 justify-content-center">
+                        <div class="col-md-10 col-lg-8 col-xl-7">
+                            <div class="alert alert-danger" role="alert">{{ flashError }}</div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </main>
+            </main>
+        {% endfor %}
+
+        {% for flashSuccess in app.flashes('success') %}
+            <main class="mb-4">
+                <div class="container px-4 px-lg-5">
+                    <div class="row gx-4 gx-lg-5 justify-content-center">
+                        <div class="col-md-10 col-lg-8 col-xl-7">
+                            <div class="alert alert-success" role="alert">{{ flashSuccess }}</div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        {% endfor %}
 
         {% block body %}{% endblock %}
+
         <!-- Footer-->
         <footer class="border-top">
             <div class="container px-4 px-lg-5">
@@ -129,5 +138,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{{ asset('clean/js/scripts.js') }}"></script>
+        {% block javascripts_end %}
+            {#{{ encore_entry_script_tags('app') }}#}
+        {% endblock %}
     </body>
 </html>
