Config Posts et post

--- a/templates/admin/post/add.html.twig
+++ b/templates/admin/post/add.html.twig
@@ -1,10 +1,19 @@
-{% extends 'base.html.twig' %}
-    
-{% block title %}Ajout d'une article{% endblock %}
-    
-{% block body %}
-<div class="example-wrapper">
-    <h1>Ajout d'une article</h1>
-    {{ form(form) }}
-</div>
+{% extends 'clean.html.twig' %}
+
+{% block title %}Ajout d'une article
 {% endblock %}
+
+{% block body %}
+	<main class="mb-4">
+		<div class="container px-4 px-lg-5">
+			<div class="row gx-4 gx-lg-5 justify-content-center">
+				<div class="col-md-10 col-lg-8 col-xl-7">
+					<div class="example-wrapper">
+						<h1>Ajout d'un article</h1>
+						{{ form(form) }}
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+	{% endblock %}
