--- a/templates/admin/category/add.html.twig
+++ b/templates/admin/category/add.html.twig
@@ -1,10 +1,21 @@
-{% extends 'base.html.twig' %}
-    
-{% block title %}Ajout d'une catégorie{% endblock %}
-    
-{% block body %}
-<div class="example-wrapper">
-    <h1>Ajout d'une catégorie</h1>
-    {{ form(form) }}
-</div>
+{% extends '/admin/sbadmin.html.twig' %}
+
+{% block title %}Ajout d'une catégorie
 {% endblock %}
+
+{% block body %}
+	<!-- Main Content-->
+	<main class="mb-4">
+		<div class="container px-4 px-lg-5">
+			<div class="row gx-4 gx-lg-5 justify-content-center">
+				<div class="col-md-10 col-lg-8 col-xl-7">
+					<div class="example-wrapper">
+						<h1>Ajout d'une catégorie</h1>
+						{{ form(form) }}
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+
+	{% endblock %}
