--- a/templates/post/posts.html.twig
+++ b/templates/post/posts.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block sub %}Bienvenue sur notre Blog !
-	<br>Voici la liste des articles les plus récents.
+	<br>Voici la liste des articles les plus récents<br>et sur le coté droit les plus anciens.
 {% endblock %}
 
 {% block bg %}
