--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,20 +1,85 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/sbadmin.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}Hello AdminController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/symfony/version_5.3/my_project/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/symfony/version_5.3/my_project/templates/admin/index.html.twig'|file_link(0) }}">templates/admin/index.html.twig</a></code></li>
-    </ul>
-</div>
+	<main>
+		<div class="container-fluid px-4">
+			<h1 class="mt-4">Dashboard</h1>
+			<ol class="breadcrumb mb-4">
+				<li class="breadcrumb-item active">Dashboard</li>
+			</ol>
+			<div class="row">
+				<div class="col-xl-3 col-md-6">
+					<div class="card bg-primary text-white mb-4">
+						<div class="card-body">Primary Card</div>
+						<div class="card-footer d-flex align-items-center justify-content-between">
+							<a class="small text-white stretched-link" href="#">View Details</a>
+							<div class="small text-white">
+								<i class="fas fa-angle-right"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-3 col-md-6">
+					<div class="card bg-warning text-white mb-4">
+						<div class="card-body">Warning Card</div>
+						<div class="card-footer d-flex align-items-center justify-content-between">
+							<a class="small text-white stretched-link" href="#">View Details</a>
+							<div class="small text-white">
+								<i class="fas fa-angle-right"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-3 col-md-6">
+					<div class="card bg-success text-white mb-4">
+						<div class="card-body">Success Card</div>
+						<div class="card-footer d-flex align-items-center justify-content-between">
+							<a class="small text-white stretched-link" href="#">View Details</a>
+							<div class="small text-white">
+								<i class="fas fa-angle-right"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-3 col-md-6">
+					<div class="card bg-danger text-white mb-4">
+						<div class="card-body">Danger Card</div>
+						<div class="card-footer d-flex align-items-center justify-content-between">
+							<a class="small text-white stretched-link" href="#">View Details</a>
+							<div class="small text-white">
+								<i class="fas fa-angle-right"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-6">
+					<div class="card mb-4">
+						<div class="card-header">
+							<i class="fas fa-chart-area me-1"></i>
+							Area Chart Example
+						</div>
+						<div class="card-body">
+							<canvas id="myAreaChart" width="100%" height="40"></canvas>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="card mb-4">
+						<div class="card-header">
+							<i class="fas fa-chart-bar me-1"></i>
+							Bar Chart Example
+						</div>
+						<div class="card-body">
+							<canvas id="myBarChart" width="100%" height="40"></canvas>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
 {% endblock %}
