--- a/templates/shared/_sidebar.html.twig
+++ b/templates/shared/_sidebar.html.twig
@@ -1,11 +1,12 @@
 <!-- sidebar -->
 <div
 	class="col-md-12 col-lg-3 col-xl-2">
+	<p class="post-meta">
 	{# {{ dump(oldposts) }} #}
 	{% for post in oldposts %}
 		<a href="{{ path('post_view', {slug: post.slug}) }}">
-			<div class="post-title">{{ post.title }}
-
+			<div class="post-title">
+				{{ post.title }}
 			</div>
 			<div>
 				{{ post.createdAt | ago }}
@@ -14,5 +15,6 @@
 		<img src="{{ post.image }}" alt="" style="width: 100%">
 
 	{% endfor %}
+	</p>
 
 </div>
