--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -20,7 +20,7 @@
                         }) }}
                         {{ form_row(registrationForm.agreeTerms) }}
 
-                        <button type="submit" class="btn">Register</button>
+                        <button type="submit" class="btn btn-success btn-lg">Register</button>
                     {{ form_end(registrationForm) }}
                 </div>
             </div>
