--- a/templates/admin/sbadmin.html.twig
+++ b/templates/admin/sbadmin.html.twig
@@ -13,7 +13,9 @@
 		<link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet"/>
 		<link href="{{ asset('sbadmin/css/styles.css') }}" rel="stylesheet"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
-	</head>
+        {% block javascripts %}
+            {#{{ encore_entry_script_tags('app') }}#}
+        {% endblock %}	</head>
 	<body class="sb-nav-fixed">
 		<nav
 			class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -76,12 +78,6 @@
 									<i class="fas fa-angle-down"></i>
 								</div>
 							</a>
-							<a class="nav-link" href="{{ path('admin_category_index') }}">
-								<div class="sb-nav-link-icon">
-									<i class="fas fa-chart-area"></i>
-								</div>
-								Catégories
-							</a>
 							<div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
 								<nav class="sb-sidenav-menu-nested nav">
 									<a class="nav-link" href="layout-static.html">Static Navigation</a>
@@ -134,12 +130,40 @@
 								</div>
 								Charts
 							</a>
-							<a class="nav-link" href="tables.html">
+							<a class="nav-link" href="{{ path('admin_post_index') }}">
 								<div class="sb-nav-link-icon">
 									<i class="fas fa-table"></i>
 								</div>
 								Tables
 							</a>
+							<div class="sb-sidenav-menu-heading">TABLES</div>
+							<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseTables" aria-expanded="false" aria-controls="collapseTables">
+								<div class="sb-nav-link-icon">
+									<i class="fas fa-table"></i>
+								</div>
+								Listes
+								<div class="sb-sidenav-collapse-arrow">
+									<i class="fas fa-angle-down"></i>
+								</div>
+							</a>
+							<div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+								<nav class="sb-sidenav-menu-nested nav">
+									<a class="nav-link" href="{{ path('admin_category_index') }}">Catégories</a>
+									<a class="nav-link" href="{{ path('admin_post_index') }}">Articles</a>
+								</nav>
+							</div>
+							<!--<a class="nav-link" href="{{ path('admin_category_index') }}">
+								<div class="sb-nav-link-icon">
+									<i class="fas fa-table"></i>
+								</div>
+								Catégories
+							</a>
+							<a class="nav-link" href="{{ path('admin_post_index') }}">
+								<div class="sb-nav-link-icon">
+									<i class="fas fa-table"></i>
+								</div>
+								Articles
+							</a>-->
 						</div>
 					</div>
 					<div class="sb-sidenav-footer">
