--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/sbadmin.html.twig' %}
 
-{% block title %}Hello AdminController!
+{% block title %}Dashboard
 {% endblock %}
 
 {% block body %}
