--- a/templates/admin/sbadmin.html.twig
+++ b/templates/admin/sbadmin.html.twig
@@ -49,7 +49,7 @@
 						</li>
 						<li><hr class="dropdown-divider"/></li>
 						<li>
-							<a class="dropdown-item" href="#!">Logout</a>
+							<a class="dropdown-item" href="/logout">Logout</a>
 						</li>
 					</ul>
 				</li>
